[gd_scene load_steps=32 format=3 uid="uid://20om3omb3vo5"]

[ext_resource type="Texture2D" uid="uid://c4n0i6lb46nll" path="res://sprites/top_left_vignette.png" id="1_1i3ks"]
[ext_resource type="FontFile" uid="uid://coq1aojhddgk0" path="res://fonts/cc.yal.6w4.ttf" id="1_65kbn"]
[ext_resource type="Script" uid="uid://bda8ssah5vlyv" path="res://scenes/main_menu.gd" id="1_n0q5r"]
[ext_resource type="Texture2D" uid="uid://81hfp6vnexwk" path="res://sprites/logo2.png" id="1_qgd8p"]
[ext_resource type="Script" uid="uid://cn2l7mdtoa1gr" path="res://scenes/achievements.gd" id="4_15uo5"]
[ext_resource type="Script" uid="uid://daqpscnjmt0v" path="res://scenes/Extra Credits.gd" id="4_estw7"]
[ext_resource type="Texture2D" uid="uid://hlorn0qbabxg" path="res://sprites/window_rect.png" id="4_ism2r"]
[ext_resource type="Script" uid="uid://b4jokettx2sp2" path="res://scenes/options.gd" id="7_7fusm"]
[ext_resource type="Script" uid="uid://d2a11s5emdwf4" path="res://scenes/extra_credits.gd" id="7_im4cs"]
[ext_resource type="Script" uid="uid://cgife5tbk4cmh" path="res://scenes/achievements_menu.gd" id="7_mslyy"]
[ext_resource type="Script" uid="uid://bp27oldyb23im" path="res://scenes/options_menu.gd" id="10_7fusm"]
[ext_resource type="Script" uid="uid://c27smnf6nh3he" path="res://scenes/to_dark.gd" id="10_skvia"]
[ext_resource type="Texture2D" uid="uid://c152n3cyb74pm" path="res://sprites/spr_grabber1.png" id="13_mtiyh"]
[ext_resource type="Texture2D" uid="uid://duxwi161esrdk" path="res://sprites/mage_thumbup.png" id="14_ma6vl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtiyh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ma6vl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma6vl"]
bg_color = Color(0.329412, 0.329412, 0.329412, 0.32549)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3c6x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld6kw"]

[sub_resource type="Theme" id="Theme_mslyy"]
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_65kbn")
Button/styles/disabled = SubResource("StyleBoxEmpty_mtiyh")
Button/styles/focus = SubResource("StyleBoxEmpty_ma6vl")
Button/styles/hover = SubResource("StyleBoxFlat_ma6vl")
Button/styles/normal = SubResource("StyleBoxEmpty_l3c6x")
Button/styles/pressed = SubResource("StyleBoxEmpty_ld6kw")

[sub_resource type="LabelSettings" id="LabelSettings_skvia"]
font = ExtResource("1_65kbn")

[sub_resource type="LabelSettings" id="LabelSettings_ism2r"]
font = ExtResource("1_65kbn")
font_size = 8

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ism2r"]
texture = ExtResource("4_ism2r")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_n0q5r"]
font = ExtResource("1_65kbn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fbba"]
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sepmt"]

[sub_resource type="Theme" id="Theme_im4cs"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_1fbba")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_sepmt")

[sub_resource type="LabelSettings" id="LabelSettings_es6bt"]
font = ExtResource("1_65kbn")
font_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtiyh"]
bg_color = Color(0.219501, 0.219501, 0.219501, 1)
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Theme" id="Theme_ma6vl"]
HSlider/icons/grabber = ExtResource("13_mtiyh")
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = ExtResource("13_mtiyh")
HSlider/styles/slider = SubResource("StyleBoxFlat_mtiyh")

[sub_resource type="LabelSettings" id="LabelSettings_1i3ks"]
font = ExtResource("1_65kbn")
font_size = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n0q5r")

[node name="BG -- Hier kommt der BG shader" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0, 0.180392, 1)

[node name="Vignette" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1i3ks")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -36.0
offset_right = -24.0
offset_bottom = 4.0

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 1
offset_right = 139.0
offset_bottom = 47.0
scale = Vector2(3.674, 3.674)
texture = ExtResource("1_qgd8p")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
offset_left = 27.0
offset_top = 198.0
offset_right = 178.0
offset_bottom = 483.0
scale = Vector2(1.53, 1.53)
theme_override_constants/v_separation = 17

[node name="New Game" type="Button" parent="GridContainer"]
layout_mode = 2
theme = SubResource("Theme_mslyy")
text = "New Game
"
alignment = 0

[node name="Achievements" type="Button" parent="GridContainer"]
layout_mode = 2
theme = SubResource("Theme_mslyy")
text = "Achievements"
alignment = 0
script = ExtResource("4_15uo5")

[node name="Extra Credits" type="Button" parent="GridContainer"]
layout_mode = 2
theme = SubResource("Theme_mslyy")
text = "Extra Credits"
alignment = 0
script = ExtResource("4_estw7")

[node name="Options" type="Button" parent="GridContainer"]
layout_mode = 2
theme = SubResource("Theme_mslyy")
text = "Options"
alignment = 0
script = ExtResource("7_7fusm")

[node name="Exit" type="Button" parent="GridContainer"]
layout_mode = 2
theme = SubResource("Theme_mslyy")
text = "Exit"
alignment = 0

[node name="Locker" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="Extra Credits" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -82.0
offset_right = 56.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(56, 51)
texture = ExtResource("4_ism2r")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource("7_im4cs")

[node name="RichTextLabel" type="Label" parent="Extra Credits"]
texture_filter = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_right = 38.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Special thanks to:"
label_settings = SubResource("LabelSettings_skvia")
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Extra Credits"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 16.2
offset_right = 45.0
offset_bottom = 20.2
grow_horizontal = 2

[node name="Label" type="Label" parent="Extra Credits/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "enekoassets - 2D Burn & dissolve shader"
label_settings = SubResource("LabelSettings_ism2r")

[node name="TextureButton" type="Button" parent="Extra Credits"]
layout_mode = 0
offset_top = 105.0
offset_right = 112.0
offset_bottom = 117.0
theme_override_fonts/font = ExtResource("1_65kbn")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal = SubResource("StyleBoxTexture_ism2r")
text = "Close"

[node name="Achievements" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.9999
offset_top = -29.0
offset_right = 82.0001
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(56, 58)
texture = ExtResource("4_ism2r")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource("7_mslyy")

[node name="RichTextLabel" type="Label" parent="Achievements"]
texture_filter = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 56.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Achievements"
label_settings = SubResource("LabelSettings_n0q5r")
horizontal_alignment = 1

[node name="AchievementList" type="RichTextLabel" parent="Achievements"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_im4cs")
theme_override_fonts/normal_font = ExtResource("1_65kbn")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]
[color=darkgray]Beginner Slayer - 100 Enemies Slain[/color]"
horizontal_alignment = 1

[node name="TextureButton" type="Button" parent="Achievements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 51.5
offset_right = 56.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_65kbn")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal = SubResource("StyleBoxTexture_ism2r")
text = "Close"

[node name="Options" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.9999
offset_top = -29.0
offset_right = 82.0001
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
pivot_offset = Vector2(56, 58)
texture = ExtResource("4_ism2r")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource("10_7fusm")

[node name="RichTextLabel" type="Label" parent="Options"]
texture_filter = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 56.0
offset_bottom = 9.0
grow_horizontal = 2
text = "Options"
label_settings = SubResource("LabelSettings_n0q5r")
horizontal_alignment = 1

[node name="TextureButton" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 51.5
offset_right = 56.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_65kbn")
theme_override_font_sizes/font_size = 7
theme_override_styles/focus = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/hover = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_ism2r")
theme_override_styles/normal = SubResource("StyleBoxTexture_ism2r")
text = "Close"

[node name="TextureRect" type="TextureRect" parent="Options"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("14_ma6vl")

[node name="Label" type="Label" parent="Options/TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.8
offset_top = -29.2
offset_right = 7.19995
offset_bottom = -6.2
grow_horizontal = 0
grow_vertical = 0
text = "thats all!"
label_settings = SubResource("LabelSettings_es6bt")

[node name="Label" type="Label" parent="Options"]
offset_left = 4.99998
offset_top = 13.4
offset_right = 95.0
offset_bottom = 17.9
size_flags_horizontal = 4
text = "Volume: "
label_settings = SubResource("LabelSettings_ism2r")

[node name="HSlider" type="HSlider" parent="Options/Label"]
layout_mode = 0
offset_left = 18.8
offset_top = 2.4
offset_right = 248.8
offset_bottom = 10.4
scale = Vector2(0.25, 0.25)
theme = SubResource("Theme_ma6vl")

[node name="ToDark" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("10_skvia")

[node name="Credts" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = -73.0
offset_right = 215.0
offset_bottom = -18.8
grow_vertical = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(0, 54.2)
text = "Made for the GMTK 2025 Game Jam
Developed by:
Martin \"Kl3XY\" Gaffke
Kilian \"Hoetty\" Behnke"
label_settings = SubResource("LabelSettings_1i3ks")

[connection signal="pressed" from="GridContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="GridContainer/Achievements" to="GridContainer/Achievements" method="_on_pressed"]
[connection signal="button_down" from="GridContainer/Extra Credits" to="GridContainer/Extra Credits" method="_on_button_down"]
[connection signal="pressed" from="GridContainer/Options" to="GridContainer/Options" method="_on_pressed"]
[connection signal="pressed" from="GridContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Extra Credits/TextureButton" to="Extra Credits" method="_on_texture_button_pressed"]
[connection signal="pressed" from="Achievements/TextureButton" to="Achievements" method="_on_texture_button_pressed"]
[connection signal="visibility_changed" from="Options" to="." method="_on_options_visibility_changed"]
[connection signal="visibility_changed" from="Options" to="Options" method="_on_visibility_changed"]
[connection signal="pressed" from="Options/TextureButton" to="Options" method="_on_texture_button_pressed"]
[connection signal="value_changed" from="Options/Label/HSlider" to="Options" method="_on_h_slider_value_changed"]
